--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrpyt": "^2.0.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "nodemon": "^3.1.9",
