--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.787.0",
     "bcrpyt": "^2.0.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
